# automacao-de-relatorios

./: LICENSE  README.md
automacao_relatorios_api/: alembic.ini  pyproject.toml  relatorios.db
automacao_relatorios_api/alembic/: env.py
automacao_relatorios_api/alembic/versions/: 5e50931e55f3_adiciona_a_tabela_solicitacoes.py  a8a81e726ada_adiciona_revenda_id_a_tabela_.py  d3820cac5cc6_cria_a_tabela_de_solicitações.py
automacao_relatorios_api/app/: main.py
automacao_relatorios_api/app/api/: endpoints.py
automacao_relatorios_api/app/crud/: __init__.py  crud_solicitacao.py
automacao_relatorios_api/app/db/: base.py  session.py
automacao_relatorios_api/app/models/: solicitacao.py
automacao_relatorios_api/app/schemas/: __init__.py  solicitacao.py
automacao_relatorios_api/front-end/: index.html  script.js
